--- a/index.html
+++ b/index.html
@@ -3,10 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sen:wght@400..800&display=swap" rel="stylesheet">
+    <!-- --------resetcss--------- -->
+     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <title>dự án 1</title>
 </head>
 <body>
-    
+    <div class="header">
+    <div class="header header_top">
+        <div class="left-header">
+            <p class="text">Lesson</p>
+            <p class="dot">.</p>
+        </div>
+        <div class="right-header">
+                <p class="text-1">Home</p>
+                <p class="text">Course</p>
+                <p class="text">Pricing</p>
+                <p class="text">Reviews</p>
+            <div class="button-head">
+                <a href="">SIGN UP</a>
+                <img src="./Rectangle 4580.png" alt="">
+            </div>
+        </div>
+</div>
+</div>
+
 </body>
 </html>
