--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
             <p class="dot">.</p>
         </div>
         <div class="right-header">
+            <div class="text_special">
                 <p class="text-1">Home</p>
+                <img src="./Rectangle 4580.png" alt="">
+                </div>
                 <p class="text">Course</p>
                 <p class="text">Pricing</p>
                 <p class="text">Reviews</p>
