--- a/index.html
+++ b/index.html
@@ -1,38 +1,88 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sen:wght@400..800&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sen:wght@400..800&display=swap"
+      rel="stylesheet"
+    />
     <!-- --------resetcss--------- -->
-     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>dự án 1</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="header">
-    <div class="header header_top">
+      <div class="header header_top">
         <div class="left-header">
-            <p class="text">Lesson</p>
-            <p class="dot">.</p>
+          <p class="text">Lesson</p>
+          <p class="dot">.</p>
         </div>
         <div class="right-header">
-            <div class="text_special">
-                <p class="text-1">Home</p>
-                <img src="./Rectangle 4580.png" alt="">
-                </div>
-                <p class="text">Course</p>
-                <p class="text">Pricing</p>
-                <p class="text">Reviews</p>
-            <div class="button-head">
-                <a href="">SIGN UP</a>
-                <img src="./Rectangle 4580.png" alt="">
-            </div>
+          <div class="text_special">
+            <p class="text-1">Home</p>
+            <img src="./Rectangle 4580.png" alt="" />
+          </div>
+          <p class="text">Course</p>
+          <p class="text">Pricing</p>
+          <p class="text">Reviews</p>
+          <div class="button-head">
+            <a href="">SIGN UP</a>
+            <img src="./Rectangle 4580.png" alt="" />
+          </div>
         </div>
-</div>
-</div>
-
-</body>
+      </div>
+      <div class="header_bottom">
+        <div class="header_bottom header_left">
+          <img
+            class="big"
+            src="./1c8ebcef0cf67086fc56208980149c343306592d.jpg"
+            alt=""
+          />
+          <div class="big_box">
+            <div class="box1">
+              <div class="img-box img-box1"><img class="img1" src="./Orion_page (1).svg" alt="" />
+            <p class="l1"></p></div>
+            <div class="small_boxx"><p class="top">20 Courses</p>
+            <h3 class="down">UI/UX Design</h3>
+            </div>
+            </div>
+            <div class="box2">
+              <div class="img-box img-box2"><img class="img2" src="./Orion_code-window (1).svg" alt="" />
+            <p class="l2"></p></div>
+                <div class="small_boxx"><p class="top">20 Courses</p>
+            <h3 class="down">Development</h3>
+            </div>
+            </div>
+            <div class="box3">
+              <div class="img-box img-box3"><img class="img3" src="./Orion_megaphone (1).svg" alt="" />
+            <p class="l3"></p></div>
+            <div class="small_boxx"><p class="top">30 Courses</p>
+            <h3 class="down">Marketing</h3>
+            </div>
+            </div>
+          </div>
+        </div>
+        <div class="header_bottom header_right">
+          <h1 class="top"></h1>
+          <p class="text_bottom"></p>
+          <div class="bottom_down">
+            <a href="" class="button-left"></a>
+            <a href="" class="button-right"></a>
+            <h3></h3>
+          </div>
+          <p class="bottom_down2"></p>
+          <div class="bottom">
+            <h2 class="number1"></h2>
+            <p></p>
+            <h2 class="number2"></h2>
+            <p></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
