--- a/index.html
+++ b/index.html
@@ -67,19 +67,24 @@
           </div>
         </div>
         <div class="header_bottom header_right">
-          <h1 class="top"></h1>
-          <p class="text_bottom"></p>
+          <h1 class="top">Learn without limits and spread knowledge.</h1>
+          <p class="text_bottom">Build new skills for that “this is my year” feeling with courses, certificates, and degrees from world-class universities and companies.</p>
           <div class="bottom_down">
-            <a href="" class="button-left"></a>
-            <a href="" class="button-right"></a>
-            <h3></h3>
+            <a href="" class="button-left">
+              <p class="out"></p>
+              <p class="text123">See Courses</p>
+            </a>
+            <a href="" class="button-right"><p class="out2"></p>
+            <img src="./Polygon 2 (1).svg" alt="" class="out3">
+            </a>
+            <h3>Watch Video</h3>
           </div>
-          <p class="bottom_down2"></p>
+          <p class="bottom_down2">Recent engagement</p>
           <div class="bottom">
-            <h2 class="number1"></h2>
-            <p></p>
-            <h2 class="number2"></h2>
-            <p></p>
+            <h2 class="number1">50K </h2>
+            <p>Students</p>
+            <h2 class="number2">70+ </h2>
+            <p>Courses</p>
           </div>
         </div>
       </div>
